Dt.Service 4.0-beta2

--- a/Service/src/Dt.Fsm/Dt.Fsm.csproj
+++ b/Service/src/Dt.Fsm/Dt.Fsm.csproj
@@ -313,6 +313,14 @@
 			<PackageCopyToOutput>true</PackageCopyToOutput>
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="drive\photo\2.jpg">
+			<PackageCopyToOutput>true</PackageCopyToOutput>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="drive\photo\3.jpg">
+			<PackageCopyToOutput>true</PackageCopyToOutput>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<None Update="drive\photo\banner.png">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
