发布demo服务及wasm样例

--- a/Service/src/Demo/Demo.csproj
+++ b/Service/src/Demo/Demo.csproj
@@ -2,12 +2,12 @@
 	<Import Project="..\Common.props" />
 
 	<ItemGroup>
-		<ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<Content Include="..\..\k8s\global.json" Link="etc\config\global.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Dt.Service" Version="4.0.0" />
 	</ItemGroup>
 </Project>
