--- a/Tools/DtTemplates/PrjTemplate/Svc/Svc.csproj
+++ b/Tools/DtTemplates/PrjTemplate/Svc/Svc.csproj
@@ -9,7 +9,7 @@
 
 	<ItemGroup>
 		<!-- 调试包源码可引用 Dt.Service.Debug 包 -->
-		<PackageReference Include="Dt.Service" Version="4.0.0-beta1" />
+		<PackageReference Include="Dt.Service" Version="4.0.1" />
 	</ItemGroup>
 	
 	<ItemGroup>
