iOS版icon.ttf字体路径规范

--- a/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
+++ b/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
@@ -44,7 +44,7 @@
         <Compile Include="..\Dt.Shell.Win\App.xaml.cs" Link="App.xaml.cs">
             <DependentUpon>App.xaml</DependentUpon>
         </Compile>
-        <BundleResource Include="..\Dt.Shell.Win\Assets\Fonts\*.ttf" Link="iOS\Resources\Fonts\%(Filename).ttf" />
+        <BundleResource Include="..\Dt.Shell.Win\Assets\Fonts\*.ttf" Link="iOS\Resources\Assets\Fonts\%(Filename).ttf" />
         <BundleResource Include="..\Dt.Shell.Win\Assets\Lottie\*.json" Link="iOS\Resources\Assets\Lottie\%(Filename).json" />
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-20%402x.png" />
         <ImageAsset Include="iOS\Assets.xcassets\AppIcons.appiconset\Icon-20%403x.png" />
