--- a/Service/src/Cm/web.config
+++ b/Service/src/Cm/web.config
@@ -5,7 +5,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="bin\Release\net7.0\Cm.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess">
+      <aspNetCore processPath="bin\Debug\net7.0\Cm.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="443" />
         </environmentVariables>
