--- a/Client/Dt.Core/Dt.Core.csproj
+++ b/Client/Dt.Core/Dt.Core.csproj
@@ -31,7 +31,7 @@
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Writer\EntityWriter.cs" Link="Base\Domain\Writer\EntityWriter.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Writer\UnitItem.cs" Link="Base\Domain\Writer\UnitItem.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\DataAccess\IDataAccess.cs" Link="Base\DataAccess\IDataAccess.cs" />
-        <Compile Include="..\..\Service\src\Dt.Core\Base\DataAccess\MySql\TableSchema.cs" Link="Base\DataAccess\TableSchema.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\DataAccess\TableSchema.cs" Link="Base\DataAccess\TableSchema.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Internal\Extensions\EnumEx.cs" Link="Internal\Extensions\EnumEx.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Internal\Extensions\ObjectEx.cs" Link="Internal\Extensions\ObjectEx.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Internal\Misc\AsyncLocker.cs" Link="Base\Locker\AsyncLocker.cs" />
