同步调整VS扩展中的框架模板

--- a/Client/Dt.MgrDemo/Dt.MgrDemo.csproj
+++ b/Client/Dt.MgrDemo/Dt.MgrDemo.csproj
@@ -15,5 +15,7 @@
     <ItemGroup>
         <Using Include="Dt.Base" />
         <Using Include="Dt.Mgr" />
+        <Using Include="Dt.Base.SelectionMode" Alias="SelectionMode" />
     </ItemGroup>
+    
 </Project>
