单体服务支持每个服务连接不同库

--- a/Service/src/Cosm/Properties/launchSettings.json
+++ b/Service/src/Cosm/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "Svcs": {
+    "Cosm": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": ".admin",
