--- a/Service/src/Demo/web.config
+++ b/Service/src/Demo/web.config
@@ -5,7 +5,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="bin\Release\net7.0\Demo.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess" />
+      <aspNetCore processPath="bin\Debug\net7.0\Demo.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess" />
     </system.webServer>
   </location>
 </configuration>
