--- a/Service/src/Cosm/Properties/launchSettings.json
+++ b/Service/src/Cosm/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:20200/"
+      "applicationUrl": "https://localhost:20204/"
     },
     "IIS Express": {
       "commandName": "IISExpress",
