--- a/Tools/DtTemplates/PrjTemplate/PrjTemplate.csproj
+++ b/Tools/DtTemplates/PrjTemplate/PrjTemplate.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Svc\etc\config\model.json" />
     <None Include="Wasm\pwa\manifest.json" />
     <None Include="Wasm\Program.cs" />
     <None Include="Svc\TestApi.cs" />
