--- a/Client/Common.props
+++ b/Client/Common.props
@@ -43,18 +43,18 @@
 
     <!-- 非windows引用包 -->
     <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
-        <PackageReference Include="Uno.WinUI" Version="4.8.24" PrivateAssets="none" />
+        <PackageReference Include="Uno.WinUI" Version="4.9.20" PrivateAssets="none" />
         <!-- 对应CommunityToolkit.WinUI.Lottie库，渲染Adobe AfterEffects json动画，内部引用SkiaSharp包实现LottieVisualSource -->
-        <PackageReference Include="Uno.WinUI.Lottie" Version="4.8.24" />
+        <PackageReference Include="Uno.WinUI.Lottie" Version="4.9.20" />
         <!-- uno日志 -->
-        <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.8.24" />
+        <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.20" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     </ItemGroup>
 
     <!-- windows引用包 -->
     <ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230217.4" PrivateAssets="none" />
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230502000" PrivateAssets="none" />
         <!-- Toast参数启动引用 -->
         <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     </ItemGroup>
@@ -74,7 +74,7 @@
     <!-- wasm引用包 -->
     <ItemGroup Condition="!$(TargetFramework.Contains('-'))">
         <!-- 打包后提供给外部 web 项目引用时，需要 build 里的 .target -->
-        <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.8.24" PrivateAssets="none" />
+        <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.9.20" PrivateAssets="none" />
         <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
         <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.2" />
     </ItemGroup>
