--- a/Client/Common.props
+++ b/Client/Common.props
@@ -75,6 +75,7 @@
     <ItemGroup Condition="!$(TargetFramework.Contains('-'))">
         <!-- 打包后提供给外部 web 项目引用时，需要 build 里的 .target -->
         <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.9.20" PrivateAssets="none" />
+        <PackageReference Include="Uno.WinUI.MediaPlayer.WebAssembly" Version="4.9.20" />
         <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
         <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.2" />
     </ItemGroup>
