--- a/Client/Common.props
+++ b/Client/Common.props
@@ -39,6 +39,7 @@
         <PackageReference Include="Serilog" Version="2.12.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
         <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
+        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.2" />
     </ItemGroup>
 
     <!-- 非windows引用包 -->
