--- a/Service/src/Demo/Demo.csproj
+++ b/Service/src/Demo/Demo.csproj
@@ -5,9 +5,16 @@
 		<Content Include="..\..\k8s\global.json" Link="etc\config\global.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
+		<Content Include="..\Cm\etc\config\model.json" Link="etc\config\model.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
+		<!--PrivateAssets避免引用项目的 nuget 包-->
+		<ProjectReference Include="..\Dt.Cm\Dt.Cm.csproj" PrivateAssets="all" />
+		<ProjectReference Include="..\Dt.Core\Dt.Core.csproj" PrivateAssets="all" />
+		<ProjectReference Include="..\Dt.Fsm\Dt.Fsm.csproj" PrivateAssets="all" />
+		<ProjectReference Include="..\Dt.Msg\Dt.Msg.csproj" PrivateAssets="all" />
 	</ItemGroup>
 </Project>
