--- a/Service/src/Dt.Core/Dt.Core.csproj
+++ b/Service/src/Dt.Core/Dt.Core.csproj
@@ -2,10 +2,7 @@
 	<Import Project="..\Common.props" />
 	
 	<ItemGroup>
-		<EmbeddedResource Include="Res\404.html" />
-		<EmbeddedResource Include="Res\Init.html" />
-		<EmbeddedResource Include="Res\Admin.html" />
-		<EmbeddedResource Include="Res\Error.html" />
+		<EmbeddedResource Include="Res\*.*" />
 	</ItemGroup>
 
 	<ItemGroup>
