初始化数据库的脚本打包到Dt.Service

--- a/Service/src/Dt.Core/Dt.Core.csproj
+++ b/Service/src/Dt.Core/Dt.Core.csproj
@@ -3,6 +3,7 @@
 	
 	<ItemGroup>
 		<EmbeddedResource Include="Res\*.*" />
+		<EmbeddedResource Include="Internal\InitMode\InitSql\*.*" />
 	</ItemGroup>
 
 	<ItemGroup>
