--- a/Client/Dt.Core/Dt.Core.csproj
+++ b/Client/Dt.Core/Dt.Core.csproj
@@ -28,6 +28,7 @@
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\EntityCacher.cs" Link="Base\Domain\EntityCacher.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\EventBus\IEvent.cs" Link="Base\Domain\Event\IEvent.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\EventBus\Local\IEventHandler.cs" Link="Base\Domain\Event\IEventHandler.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Writer\IEntityWriter.cs" Link="Base\Domain\Writer\IEntityWriter.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Writer\EntityWriter.cs" Link="Base\Domain\Writer\EntityWriter.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Writer\UnitItem.cs" Link="Base\Domain\Writer\UnitItem.cs" />
         <Compile Include="..\..\Service\src\Dt.Core\Base\DataAccess\IDataAccess.cs" Link="Base\DataAccess\IDataAccess.cs" />
