--- a/Client/Dt.Shell.Win/Dt.Shell.Win.csproj
+++ b/Client/Dt.Shell.Win/Dt.Shell.Win.csproj
@@ -3,8 +3,8 @@
         <OutputType>WinExe</OutputType>
         <TargetFramework>net7.0-windows10.0.19041</TargetFramework>
         <ApplicationManifest>app.manifest</ApplicationManifest>
-        <Platforms>x86;x64</Platforms>
-        <RuntimeIdentifiers>win10-x86;win10-x64</RuntimeIdentifiers>
+        <Platforms>x86;x64;ARM64</Platforms>
+        <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
         <PublishProfile>win10-$(Platform).pubxml</PublishProfile>
         <UseWinUI>true</UseWinUI>
         <EnableMsixTooling>true</EnableMsixTooling>
@@ -15,9 +15,12 @@
         <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
         <GenerateTestArtifacts>False</GenerateTestArtifacts>
         <AppxBundle>Never</AppxBundle>
-        <AppxBundlePlatforms>x64</AppxBundlePlatforms>
         <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
         <AppxPackageDir>D:\Dt\Client\Dt.Shell.Win\bin\AppPackages\</AppxPackageDir>
+        <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+        <PackageCertificateThumbprint>2DC84FB810E184C9E4816A27D213E6E084C5D568</PackageCertificateThumbprint>
+        <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
+        
     </PropertyGroup>
 
     <Import Project="..\Common.props" />
