服务地址拆分成独立配置文件url.json

--- a/Tools/DtTemplates/PrjTemplate/PrjTemplate.csproj
+++ b/Tools/DtTemplates/PrjTemplate/PrjTemplate.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <None Include="Client\Stub\Options\filenesting.json" />
     <None Include="Svc\etc\config\model.json" />
+    <None Include="Svc\etc\config\url.json" />
     <None Include="Wasm\pwa\manifest.json" />
     <None Include="Wasm\Program.cs" />
     <None Include="Svc\TestApi.cs" />
