本地4.2.2调试版

--- a/Tools/DtTemplates/PrjTemplate/PrjTemplate.csproj
+++ b/Tools/DtTemplates/PrjTemplate/PrjTemplate.csproj
@@ -55,7 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Client\Stub\Options\filenesting.json" />
-    <None Include="Svc\etc\config\model.json" />
+    <None Include="Svc\etc\config\sqlite.json" />
     <None Include="Svc\etc\config\url.json" />
     <None Include="Wasm\pwa\manifest.json" />
     <None Include="Wasm\Program.cs" />
