--- a/Service/src/Cosm/Cosm.csproj
+++ b/Service/src/Cosm/Cosm.csproj
@@ -5,7 +5,7 @@
 		<Content Include="..\..\k8s\global.json" Link="etc\config\global.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Include="..\Cm\etc\config\model.json" Link="etc\config\model.json">
+		<Content Include="..\Cm\etc\config\sqlite.json" Link="etc\config\sqlite.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
 	</ItemGroup>
