--- a/Client/Common.props
+++ b/Client/Common.props
@@ -37,7 +37,7 @@
         <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.8" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
         <PackageReference Include="Serilog" Version="2.12.0" />
-        <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+        <PackageReference Include="Serilog.Sinks.SQLite" Version="6.0.0" />
         <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
         <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.2" />
     </ItemGroup>
