--- a/Client/Common.props
+++ b/Client/Common.props
@@ -12,7 +12,8 @@
 
     <!-- 定义平台常量 -->
     <PropertyGroup Condition="$(TargetFramework.Contains('-windows'))">
-        <DefineConstants>$(DefineConstants);WIN</DefineConstants>
+        <!--ENABLECURSOR 启用光标，winui赋值时容易锁死-->
+        <DefineConstants>$(DefineConstants);WIN;ENABLECURSOR</DefineConstants>
         <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     </PropertyGroup>
 
@@ -27,37 +28,37 @@
     </PropertyGroup>
 
     <PropertyGroup Condition="!$(TargetFramework.Contains('-'))">
-        <DefineConstants>$(DefineConstants);WASM;UNO_DISABLE_KNOWN_MISSING_TYPES</DefineConstants>
+        <DefineConstants>$(DefineConstants);WASM;UNO_DISABLE_KNOWN_MISSING_TYPES;ENABLECURSOR</DefineConstants>
     </PropertyGroup>
 
     <!-- 公共引用包 -->
     <ItemGroup>
-        <PackageReference Include="Dt.Infras" Version="2.5.2" />
+        <PackageReference Include="Dt.Infras" Version="2.5.3" />
         <PackageReference Include="Dt.BuildTools" Version="1.3.4" PrivateAssets="none" />
-        <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.8" />
+        <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.11" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-        <PackageReference Include="Serilog" Version="2.12.0" />
+        <PackageReference Include="Serilog" Version="3.0.1" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
         <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
-        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.2" />
+        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.4" />
         <!-- 用到gbk -->
         <PackageReference Include="System.Text.Encoding.CodePages" Version="7.0.0" />
     </ItemGroup>
 
     <!-- 非windows引用包 -->
     <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
-        <PackageReference Include="Uno.WinUI" Version="4.9.45" PrivateAssets="none" />
+        <PackageReference Include="Uno.WinUI" Version="4.10.13" PrivateAssets="none" />
         <!-- 对应CommunityToolkit.WinUI.Lottie库，渲染Adobe AfterEffects json动画，内部引用SkiaSharp包实现LottieVisualSource -->
-        <PackageReference Include="Uno.WinUI.Lottie" Version="4.9.45" />
+        <PackageReference Include="Uno.WinUI.Lottie" Version="4.10.13" />
         <!-- uno日志 -->
-        <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.45" />
+        <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.10.13" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     </ItemGroup>
 
     <!-- windows引用包 -->
     <ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230724000" PrivateAssets="none" />
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.230822000" PrivateAssets="none" />
         <!-- Toast参数启动引用 -->
         <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     </ItemGroup>
@@ -77,8 +78,8 @@
     <!-- wasm引用包 -->
     <ItemGroup Condition="!$(TargetFramework.Contains('-'))">
         <!-- 打包后提供给外部 web 项目引用时，需要 build 里的 .target -->
-        <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.9.45" PrivateAssets="none" />
-        <PackageReference Include="Uno.WinUI.MediaPlayer.WebAssembly" Version="4.9.45" />
+        <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.10.13" PrivateAssets="none" />
+        <PackageReference Include="Uno.WinUI.MediaPlayer.WebAssembly" Version="4.10.13" />
         <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
         <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.5" />
     </ItemGroup>
