--- a/Infras/Dt.Infras.Win/Dt.Infras.Win.csproj
+++ b/Infras/Dt.Infras.Win/Dt.Infras.Win.csproj
@@ -13,7 +13,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221109.1" />
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.230822000" />
     </ItemGroup>
 
     <ItemGroup>
