Tab右键菜单，双击Tab头事件

--- a/Client/Common.props
+++ b/Client/Common.props
@@ -126,6 +126,11 @@
         <Using Remove="Microsoft.Extensions.Logging" />
     </ItemGroup>
 
+    <!--win预览xaml用-->
+    <ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
+        <EmbeddedResource Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
+    </ItemGroup>
+    
     <!-- WindowsAppSDK已内置，uno需要，否则xaml文件无法编译 -->
     <ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
         <Page Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
