--- a/Client/Common.props
+++ b/Client/Common.props
@@ -9,7 +9,7 @@
         <!-- release不输出pbd调试信息 -->
         <DebugType Condition="'$(Configuration)'=='Release'">none</DebugType>
         <!--xbf嵌入到pri文件-->
-        <DisableEmbeddedXbf>false</DisableEmbeddedXbf>
+        <!--<DisableEmbeddedXbf>false</DisableEmbeddedXbf>-->
     </PropertyGroup>
 
     <!-- 定义平台常量 -->
@@ -35,7 +35,7 @@
 
     <!-- 公共引用包 -->
     <ItemGroup>
-        <PackageReference Include="Dt.Infras" Version="3.0.0" />
+        <PackageReference Include="Dt.Infras" Version="3.0.1" />
         <PackageReference Include="Dt.BuildTools" Version="1.3.4" PrivateAssets="none" />
         <!--高于7.0.9时wasm出错-->
         <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.9" />
