--- a/Infras/Common.props
+++ b/Infras/Common.props
@@ -3,7 +3,7 @@
         <TargetFrameworks>net7.0-windows10.0.19041;net7.0;net7.0-android;net7.0-ios</TargetFrameworks>
         <NoWarn>$(NoWarn);1591;NU1701;Uno0001;0252</NoWarn>
         <!--xbf嵌入到pri文件-->
-        <DisableEmbeddedXbf>false</DisableEmbeddedXbf>
+        <!--<DisableEmbeddedXbf>false</DisableEmbeddedXbf>-->
     </PropertyGroup>
 
     <!-- release不输出pbd调试信息 -->
